syntax ="proto3";
package greet;
option go_package="greet/greetpb;greetpb";
message Greeting {
    string first_name = 1;
    string last_name = 2;
}
message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    Greeting result = 1;
}

service GreetService{
    // unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};
}

message Add {
    int32 first_number = 1;
    int32 second_number = 2;
}
message AddRequest {
    Add numbers = 1;
}
message AddResponse {
    Add result = 1;
}

service AddService {
    rpc Add(AddRequest) returns (AddResponse) {};
}